kustomizehelloworld/overlays/hw-prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: helloworld
spec:
  template:
    spec:
      containers:
        - name: helloworld-http
