kustomizehelloworld/overlays/hw-prod/oauth2-proxy-external.yaml
kind: Service
apiVersion: v1
metadata:
  name: oauth2-proxy
spec:
  type: ExternalName
  externalName: oauth2-proxy.default.svc.cluster.local
